--- a/startupcss.css
+++ b/startupcss.css
@@ -1,4 +1,49 @@
-.imagen-central{
+#capçelera {
+	background: #FF7F99;
+	height: 100px;
+}	
+	#capçelera a {
+		color: rgb(255, 255, 255);
+	}
+#titol-capçelera {
+	float: left;
+	padding: 15px 0 0 20px;
+	text-decoration: none;
+}
+	#titol-capçelera:hover {
+		color: #45494b;
+	}
+	
+	#titol-capçelera .titol {
+		display: block;
+		font-weight: 700;
+		font-size: 1.2em;
+	}
+nav {
+	float: right;
+}
+	nav ul {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+		padding-right: 20px;
+	}
+	
+		nav ul li {
+			display: inline-block;
+			line-height: 80px;
+		}
+			
+			nav ul li a {
+				display: block;
+				padding: 0 10px;
+				text-decoration: none;
+			}
+			
+				nav ul li a:hover {
+					background: #45494b;
+                }
+      .imagen-central{
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -8,6 +53,6 @@
 
 }
 
-.frase-principal{
+      .frase-principal{
     
 }
