--- a/startupcss.css
+++ b/startupcss.css
@@ -57,29 +57,32 @@ nav {
     
 }
 
-.especialistas
+.foto-perfil
 {
-    font-family: "Jost";
-    text-align: center;
-    color: black;
+  border-radius:50%;
+  width:277px;
+  height:277px;
 }
 
-.tabla-body
+.empleados
 {
-    background-color: white;
-    width:auto
+  display: flex;
+  justify-content: space-around;
+  text-align:center;
+  font-family: "Jost";
+  background-color: #FF7F99;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
-.tabla-personas
+.nombres
 {
-    background-color: #ff7f99;
-    height: 500px;
-    width: 100%;
+  color: white;
+  font-size: 18px;
 }
-.imagen-redonda
+
+.logo
 {
-    width: 277px;
-    height: 277px;
-    border-radius: 50%;
-    margin: 25px;
+  width:40px;
+  height:40px;
 }
