--- a/startupcss.css
+++ b/startupcss.css
@@ -28,28 +28,36 @@ li{
 	padding: 15px 0 0 20px;
 	text-decoration: none;
 }
-	#titol-capçalera:hover {
-		color: #45494b;
-	}
-	
 	#titol-capçalera .titol {
 		display: block;
     	font-weight: 700;
 		font-size: 1.2em;
 	}
+	.button {
+		border-radius: 50px;
+		background-color: #FF7F99;
+		opacity: 0.6;
+		filter: alpha(opacity=80);
+		text-align: center;
+		padding: 1px 24px;
+		background-color: #ffca41 
+	}
+	.button:hover {
+		box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);}
+
 nav {
 	float: right;
 }
 	nav ul {
-		margin: 0;
+		margin: 1;
 		padding: 0;
 		list-style: none;
-		padding-right: 20px;
+		padding-right: 10px;
 	}
 	
 		nav ul li {
 			display: inline-block;
-			line-height: 80px;
+			line-height: 40px;
 		}
 			
 			nav ul li a {
@@ -60,8 +68,9 @@ nav {
 			
 				nav ul li a:hover {
 					background: #45494b;
+					box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
                 }
-               
+
 				
 				.box-central{
 					width: 1877px;
