--- a/startupcss.css
+++ b/startupcss.css
@@ -10,12 +10,30 @@
 	local("Jost-Italic"),
 	url(./Jost/Jost-Italic.ttf);
 }
+
+@font-face {
+	font-family: JostBold;
+	src: local("Jost-Bold"), url(./Jost/Jost-Bold.ttf);
+}
+
+@font-face {
+	font-family: JostLight;
+	src: local("Jost-Light"), url(./Jost/Jost-Light.ttf);
+}
+
+@font-face {
+	font-family: JostMedium;
+	src: local("Jost-Medium"), url(./Jost/Jost-Medium.ttf);
+}
+
 body{
     font-family: JostRegular;
 }
 li{
 	font-family: JostCursiva;
 }
+
+
 #capçalera {
 	background: #FF7F99;
 	height: 100px;
@@ -63,40 +81,63 @@ nav {
                 }
                
 				
-				.box-central{
-					width: 1877px;
-					height: 800px;
-					border: 5px solid currentColor;
-					display: flex;
-				   }
-				
-				.imagen-central{
-					width: 600px;
-					height: 600px;
-					border:2px solid #fff;
-					display: block;
-					margin-top: 5%;
-					margin-left: 8%;
-					
-				
-				}
-				
-				.frase-principal{
-					margin-top: 30%;
-					margin-left: 50%;
-					font-size: 100px;
-				}
-				
-				.frase-secundaria{
-					margin-top: 0%;
-					
-				}
-				
-				.boton-llamamos{
-					width: 100px;
-					height: 60px;
-					margin-top: 0%;
-				}
+.box-central{
+	width: 1877px;
+	height: 800px;
+	display: flex;
+}
+			
+.imagen-central{
+	width: 600px;
+	height: 600px;
+	border:2px solid #fff;
+	display: block;
+	margin-top: 5%;
+	margin-left: 8%;
+}
+	
+.contenedor-frases{
+	padding: 100px 120px;
+	width: fit-content;
+	height: fit-content;
+	line-height: 0px;
+}
+
+.frase-principal{
+	font-size: 95px;
+	font-family: "JostMedium";
+	color: #FF7F99;
+	line-height: 90px;
+	margin-top: 80px;
+}
+
+.frase-secundaria{
+    font-size: 30px;
+	font-family: "JostMedium";
+	margin-left: 10px;
+	margin-top: 40px;
+}
+			
+.boton-llamamos{
+	font-size: 25px;
+	font-family: "JostBold";
+	text-align: center;
+	color: white;
+	background-color: #ffca41;
+	border: 2px #ffca41;
+	width: 250px;
+	height: 80px;
+	border-radius: 40px;
+	margin-top: 80px;
+	transition: width 2s height 4s;
+}
+
+.boton-llamamos:hover{
+	box-shadow: 0 6px 12px 0 rgba(0,0,0,0.24), 0 10px 28px 0 rgba(0,0,0,0.19);
+	transition-duration: 700ms;
+	width: 300px;
+}
+
 
 
 .foto-perfil
