--- a/startupcss.css
+++ b/startupcss.css
@@ -37,19 +37,25 @@ li{
 #capçalera {
 	background: #FF7F99;
 	height: 100px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }	
 #capçalera a {
 	color: rgb(255, 255, 255);
 }
 #titol-capçalera {
-	float: left;
-	padding: 15px 0 0 20px;
+	padding-left: 15px;
 	text-decoration: none;
 }
-	#titol-capçalera .titol {
+	.titol {
 		display: block;
     	font-weight: 700;
 		font-size: 1.2em;
+	}
+
+	.titol span {
+		color: #ffca41;
 	}
 	.button {
 		border-radius: 50px;
@@ -64,7 +70,7 @@ li{
 		box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);}
 
 nav {
-	float: right;
+	
 }
 	nav ul {
 		margin: 1;
@@ -138,7 +144,8 @@ nav {
 	height: 80px;
 	border-radius: 40px;
 	margin-top: 80px;
-	transition: width 2s height 4s;
+	transition: all 2s;
+	box-shadow: 0 6px 12px 0 rgba(0,0,0,0), 0 10px 28px 0 rgba(0,0,0,0);
 }
 
 .boton-llamamos:hover{
